internal/filters/testdata/cargo_test_build_error.txt
error[E0432]: unresolved import `foo`
 --> src/lib.rs:1:5
  |
1 | use foo;
  | ^^^

error: could not compile `mylib` (lib) due to 1 previous error
